--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,17 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:max="0"
+            android:progress="120" />
 
         <CheckBox
             android:text="actief"
@@ -41,7 +48,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/button"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -52,15 +59,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="@string/prompt_password" />
+                android:hint="@string/prompt_password"
+                android:id="@+id/passwordText" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
-
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/seekBar"
-        android:max="0"
-        android:progress="120" />
 
 </RelativeLayout>
